compile-direct/tests/failing/1-invalid_arg/main.af
int: @int

foo: (n: int) {
    @write("Number\n", @exit(0))
}
main: () {
    foo("invalid_arg")  // Error: expected int, found str
}
